--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,20 +5,20 @@ pipeline {
             args '-p 3000:3000'
         }
     }
-    // environment {
-    //     CI = 'true'
-    // }
+    environment {
+        CI = 'true'
+    }
     stages {
         stage('Build') {
             steps {
                 sh 'npm install'
             }
         }
-        // stage('Test') {
-        //     steps {
-        //         sh './jenkins/scripts/test.sh'
-        //     }
-        // }
+        stage('Test') {
+            steps {
+                sh './jenkins/scripts/test.sh'
+            }
+        }
         // stage('Deliver') {
         //     steps {
         //         sh './jenkins/scripts/deliver.sh'
