--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,27 +12,27 @@ jobs: # a collection of steps
           command: 'sudo npm install -g npm@latest'
       - restore_cache: # special step to restore the dependency cache
           # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
-          key: dependency-cache-{{ checksum "package.json" }}
+          key: dependency-cache-{{ checksum "/client/package.json" }}
       - run:
           name: install-npm-wee
-          command: npm install
+          command: cd client && npm install
       - save_cache: # special step to save the dependency cache
-          key: dependency-cache-{{ checksum "package.json" }}
+          key: dependency-cache-{{ checksum "/client/package.json" }}
           paths:
-            - ./node_modules
+            - ./client/node_modules
       - run: # run tests
           name: test
-          command: npm test
+          command: cd client && npm test
       # - run: # run coverage report
       #     name: code-coverage
       #     command: './node_modules/.bin/nyc report --reporter=text-lcov'
       - store_artifacts: # special step to save test results as as artifact
           # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
-          path: test-results.xml
+          path: /client/test-results.xml
           prefix: tests
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
-          path: coverage
+          path: /client/coverage
           prefix: coverage
       - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: test-results.xml
+          path: /client/test-results.xml
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
