--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs: # a collection of steps
           name: install-npm-wee
           command: cd client && npm install
       - save_cache: # special step to save the dependency cache
-          key: dependency-cache-{{ checksum "/client/package.json" }}
+          key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - ./client/node_modules
       - run: # run tests
