--- a/client/package.json
+++ b/client/package.json
@@ -27,10 +27,8 @@
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
-    "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
-    "jest-watch-typeahead": "^0.2.1",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -115,5 +113,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "jest": "^23.6.0",
+    "jest-watch-typeahead": "^0.2.1"
   }
 }
