--- a/client/package.json
+++ b/client/package.json
@@ -27,9 +27,10 @@
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
-    "jest": "^23.6.0",
+    "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
+    "jest-watch-typeahead": "^0.2.1",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -104,6 +105,10 @@
       "web.jsx",
       "jsx",
       "node"
+    ],
+    "watchPlugins": [
+      "/Users/Sim/Workplace/food-diary/client/node_modules/jest-watch-typeahead/filename.js",
+      "/Users/Sim/Workplace/food-diary/client/node_modules/jest-watch-typeahead/testname.js"
     ]
   },
   "babel": {
