--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
     "morgan": "~1.9.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
-    "nodemon": "^1.18.10"
+    "chai": "^4.2.0",
+    "mocha": "^6.0.2",
+    "nock": "^10.0.6",
+    "nodemon": "^1.18.10",
+    "nyc": "^13.3.0",
+    "sinon-chai": "^3.3.0",
+    "webpack": "^4.29.6"
   }
 }
