--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node index.js --exec babel-node --presets babel-preset-env",
     "dev": "nodemon index.js --exec babel-node --presets babel-preset-env",
-    "test": "echo \"Error: no test specified\"",
+    "test": "cross-env NODE_ENV=test mocha --recursive",
+    "test:watch": "npm run test -- --watch",
+    "test:coverage": "nyc npm run test",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "dependencies": {
@@ -22,13 +24,39 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
+    "babel-plugin-istanbul": "^5.1.1",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
+    "cross-env": "^5.2.0",
     "mocha": "^6.0.2",
     "nock": "^10.0.6",
     "nodemon": "^1.18.10",
     "nyc": "^13.3.0",
     "sinon-chai": "^3.3.0",
     "webpack": "^4.29.6"
+  },
+  "nyc": {
+    "include": [
+      "*.js",
+      "**/*.js"
+    ],
+    "reporter": [
+      "lcov",
+      "json",
+      "text-summary"
+    ],
+    "exclude": [
+      "dist",
+      "test",
+      "node_modules",
+      "coverage",
+      "jenkins",
+      "client",
+      "routes",
+      ".circleci"
+    ],
+    "sourceMap": true,
+    "instrument": true,
+    "all": true
   }
 }
