--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "server",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "engines": {
+    "node": "10.15.3"
+  },
   "private": true,
   "scripts": {
     "start": "node index.js --exec babel-node --presets babel-preset-env",
