--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "cross-env NODE_ENV=test mocha server/ --recursive",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "nyc npm run test",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "sequelize db:migrate && cd client && npm install && npm run build"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -24,7 +24,8 @@
     "morgan": "~1.9.0",
     "pg": "^7.8.2",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^5.1.0"
+    "sequelize": "^5.1.0",
+    "sequelize-cli": "^5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
