--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "start": "node index.js --exec babel-node --presets babel-preset-env",
-    "dev": "nodemon index.js --exec babel-node --presets babel-preset-env",
+    "start-client": "cd client && npm start",
+    "dev": "run-p start start-client",
     "test": "cross-env NODE_ENV=test mocha server/ --recursive",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "nyc npm run test",
@@ -22,6 +23,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "npm-run-all": "^4.1.5",
     "pg": "^7.8.2",
     "pg-hstore": "^2.3.2",
     "sequelize": "^5.1.0",
