--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "heroku-postbuild": "sequelize db:migrate && cd client && npm install --only=dev --no-shrinkwrap && npm install && npm run build"
   },
   "dependencies": {
+    "braces": "^2.3.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -24,7 +25,7 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "npm-run-all": "^4.1.5",
-    "pg": "^7.8.2",
+    "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^5.1.0",
     "sequelize-cli": "^5.4.0"
@@ -42,6 +43,7 @@
     "nock": "^10.0.6",
     "nodemon": "^1.18.10",
     "nyc": "^13.3.0",
+    "sinon": "^7.2.7",
     "sinon-chai": "^3.3.0",
     "webpack": "^4.29.6"
   },
