--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   },
   "private": true,
   "scripts": {
-    "start": "nodemon index.js --exec babel-node --presets babel-preset-env",
+    "start": "nodemon index.js",
     "start-client": "cd client && npm start",
+    "start-dev-babel": "nodemon index.js --exec babel-node --presets babel-preset-env",
     "dev": "run-p start start-client",
     "test": "cross-env NODE_ENV=test mocha server/ --recursive",
     "test:watch": "npm run test -- --watch",
@@ -24,6 +25,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
@@ -41,7 +43,6 @@
     "cross-env": "^5.2.0",
     "mocha": "^6.0.2",
     "nock": "^10.0.6",
-    "nodemon": "^1.18.10",
     "nyc": "^13.3.0",
     "sinon": "^7.2.7",
     "sinon-chai": "^3.3.0",
