move back server files into root

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   },
   "private": true,
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js --exec babel-node --presets babel-preset-env",
+    "start-dev": "nodemon index.js --exec babel-node --presets babel-preset-env",
     "start-client": "cd client && npm start",
-    "start-dev-babel": "nodemon index.js --exec babel-node --presets babel-preset-env",
-    "dev": "run-p start start-client",
+    "dev": "run-p start-dev start-client",
     "test": "cross-env NODE_ENV=test mocha server/ --recursive",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "nyc npm run test",
@@ -25,7 +25,6 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
@@ -42,6 +41,7 @@
     "chai": "^4.2.0",
     "cross-env": "^5.2.0",
     "mocha": "^6.0.2",
+    "nodemon": "^1.18.10",
     "nock": "^10.0.6",
     "nyc": "^13.3.0",
     "sinon": "^7.2.7",
