--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start-dev": "nodemon index.js --exec babel-node --presets babel-preset-env",
     "start-client": "cd client && npm start",
     "dev": "run-p start-dev start-client",
-    "test": "cross-env NODE_ENV=test mocha server/ --recursive",
+    "test": "cross-env NODE_ENV=test mocha --recursive",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "nyc npm run test",
     "heroku-postbuild": "sequelize db:migrate && cd client && npm install --only=dev --no-shrinkwrap && npm install && npm run build"
